# logpy

./: .gitignore  LICENSE  README.md  bookitty  install.sh  loggy  loggy.py  pyproject.toml
src/bookitty/: main.py
